mep-k8s.yaml
# Copyright 2020 Huawei Technologies Co., Ltd.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.


# mep namespace
apiVersion: v1
kind: Namespace
metadata:
  name: mep

# mep pod
---
apiVersion: v1
kind: Pod
metadata:
  name: mep
  namespace: mep
  labels:
    app: mep
spec:
  containers:
  - image: edgegallery/mep:latest
    imagePullPolicy: Always
    name: mep
    ports:
    - containerPort: 8088

# mep service
---
apiVersion: v1
kind: Service
metadata:
  name: mep-service
  namespace: mep
spec:
  selector:
    app: mep
  type: NodePort
  ports:
  - port: 8088
    name: mep-port
    nodePort: 30088
