mep-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: mep-ingress
spec:
  rules:
  - http:
      paths:
      - path: /v4/default/registry/microservices
        backend:
          serviceName: mep-service
          servicePort: 8088
